--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
-  - title: "Posts"
-    url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
   - title: "About"
     url: /about/
+  - title: "Blog Posts"
+    url: /posts/
+  - title: "Portfolio Pieces"
+    url: /portfolio/
+  - title: "Teaching Statement"
+    url: /teaching-statement/
