--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description:           >- # this means to ignore newlines until "baseurl:"
   The works included here are focused on technical writing, but who knows what I may explore!
 twitter_username:      username
 github_username:       tannersullie
-github: [metadata] 
+github: [metadata]
 minimal_mistakes_skin: default
 search:                true
 
@@ -66,7 +66,7 @@ plugins:
 
 author:
   name   :             "Tanner Sullivan"
-  avatar :             "/assets/images/me.png"
+  avatar :             "/assets/images/author-pic.png"
   bio    :             "M.A in Professional and Technical Writing"
   repository:          "tannersullie/writersite"
   location:            "Arkansas, US"
