--- a/_config.yml
+++ b/_config.yml
@@ -119,6 +119,14 @@ defaults:
       layout:          single
       author_profile:  true
       show_date:       true
+  # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: true
+      share: true
     breadcrumbs:           true #disabled by default
 
 
@@ -128,3 +136,7 @@ category_archive:
 tag_archive:
   type:                liquid
   path:                /tags/
+  collections:
+    portfolio:
+      output: true
+      permalink: /:collection/:path/
