--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title:                 Tanner's Writing Site
+title:                 "Tanner's Writing Site"
 subtitle:              "My Portfolio"
 logo:                  "/assets/images/TS-Logo2021-blacknwhite.png"
 email:                 tssullivan115@icloud.com
@@ -123,13 +123,53 @@ defaults:
       show_date:       true
   # _portfolio
   - scope:
-      path: ""
+      path: "_portfolio"
       type: portfolio
+    values:
+      layout: wide
+      author_profile: false
+      share: true
+    breadcrumbs:           true #disabled by default
+  # _docs
+  - scope:
+      path: "/_portfolio/_docs"
+      type: docs
     values:
       layout: single
       author_profile: false
       share: true
     breadcrumbs:           true #disabled by default
+    sidebar:
+      nav: "docs"
+  # Professional-artifacts
+  - scope:
+      path: "/_portfolio/_professional-artifacts"
+      type: professional-artifacts
+    values:
+      layout: single
+      author_profile: false
+      share: true
+    breadcrumbs:           true #disabled by default
+  # Educational-artifacts
+  - scope:
+      path: "/_portfolio/_educational-artifacts/"
+      type: educational-artifacts
+    values:
+      layout: single
+      author_profile: false
+      share: true
+    breadcrumbs:           true #disabled by default
+  # Explorative-artifacts
+  - scope:
+      path: "/_portfolio/_personal-projects/"
+      type: personal-projects
+    values:
+      layout: single
+      author_profile: false
+      share: true
+    breadcrumbs:           true #disabled by default
+
+
 
 
 category_archive:
@@ -139,6 +179,15 @@ tag_archive:
   type:                liquid
   path:                /tags/
 collections:
-  portfolio:
+  docs:
     output: true
-    permalink: /:collection/:path/
+    permalink: /portfolio/:collection/:path/
+  professional-artifacts:
+    output: true
+    permalink: /portfolio/:collection/:path/
+  educational-artifacts:
+    output: true
+    permalink: /portfolio/:collection/:path/
+  personal-projects:
+    output: true
+    permalink: /portfolio/:collection/:path/
