Working up some content.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
 #    url: /posts/
   - title: "Werk Work"
     url: /professional-artifacts/
-  - title: "Learning Work"
+  - title: "Education EXP"
     url: /educational-artifacts/
   - title: "Fun Stuff"
     url: /personal-projects/
