--- a/_config.yml
+++ b/_config.yml
@@ -73,9 +73,9 @@ author:
     - label:           "Teaching Statement"
       icon:            "fas fa-fw fa-link"
       url:             "https://www.tannerswriting.site/teaching-statement/"
-    - label:           "Twitter"
-      icon:            "fab fa-fw fa-twitter-square"
-      url:             "https://twitter.com/sulliespace"
+#    - label:           "Twitter"
+#      icon:            "fab fa-fw fa-twitter-square"
+#      url:             "https://twitter.com/sulliespace"
     - label:           "GitHub"
       icon:            "fab fa-fw fa-github"
       url:             "https://github.com/tannersullie"
@@ -85,9 +85,9 @@ author:
 
 footer:
   links:
-    - label:           "Twitter"
-      icon:            "fab fa-fw fa-twitter-square"
-      url:             "https://twitter.com/sulliespace"
+#    - label:           "Twitter"
+#      icon:            "fab fa-fw fa-twitter-square"
+#      url:             "https://twitter.com/sulliespace"
     - label:           "GitHub"
       icon:            "fab fa-fw fa-github"
       url:             "https://github.com/tannersullie"
