--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,8 @@
 # in the templates via {{ site.myvariable }}.
 title:                 "Tanner's Writing Site"
 subtitle:              "My Portfolio"
-logo:                  "/assets/images/TS-Logo2021-blacknwhite.png"
+logo:                  "assets/images/TS-Logo2021-blacknwhite.png"
+favcon:                "assets/images/TS-Logo2021-blacknwhite.ico"
 email:                 tssullivan115@icloud.com
 description:           >- # this means to ignore newlines until "baseurl:"
   As I level up, I hope to share some of my favorite projects in this portfolio site.
@@ -32,7 +33,7 @@ minimal_mistakes_skin: "dirt" # "default", "air", "aqua", "contrast", "dark", "d
 locale: "en-US"
 timezone: America/Chicago
 url: https://www.tannerswriting.site
-og_image: /assets/images/TS-Logo2021-blacknwhite.png
+og_image: /assets/images/TS-Logo2021-blacknwhite.ico
 # Outputting
 permalink:             /:categories/:title/
 paginate:              5 # amount of posts to show
@@ -70,12 +71,6 @@ author:
   repository:          "tannersullie/writersite"
   location:            "Arkansas, US"
   links:
-    - label:           "Teaching Statement"
-      icon:            "fas fa-fw fa-link"
-      url:             "https://www.tannerswriting.site/teaching-statement/"
-#    - label:           "Twitter"
-#      icon:            "fab fa-fw fa-twitter-square"
-#      url:             "https://twitter.com/sulliespace"
     - label:           "GitHub"
       icon:            "fab fa-fw fa-github"
       url:             "https://github.com/tannersullie"
