--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title:                 "Tanner's Writing Site"
 subtitle:              "My Portfolio"
-logo:                  "assets/images/site-logo-ts.png.png"
+logo:                  "assets/images/site-logo-ts.png"
 favcon:                "assets/images/site-logo-ts.ico"
 email:                 tssullivan115@icloud.com
 description:           >- # this means to ignore newlines until "baseurl:"
