--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,7 @@ subtitle:              "My Portfolio Site"
 logo:                  "assets/images/site-logo-ts.png"
 favcon:                "assets/images/favicon-16x16.png"
 email:                 tssullivan115@icloud.com
-description:           >- # this means to ignore newlines until "baseurl:"
-  As I level up, I hope to share some of my favorite projects in this portfolio site.
-  The works included here are focused on technical writing, but who knows what I may explore!
+description:           "As I level up, I hope to share some of my favorite projects in this portfolio site. The works included here are focused on technical writing, but who knows what I may explore!"
 twitter_username:      sulliespace
 github_username:       tannersullie
 github:                https://github.com/tannersullie/writersite
@@ -32,6 +30,7 @@ remote_theme:          mmistakes/minimal-mistakes
 minimal_mistakes_skin: "dirt" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 locale: "en-US"
 timezone: America/Chicago
+date_format: "%Y-%m-%d"
 url: https://www.tannerswriting.site
 og_image: /assets/images/og-ref-img.png
 # Outputting
@@ -39,7 +38,7 @@ permalink:             /:categories/:title/
 paginate:              5 # amount of posts to show
 paginate_path:         /page:num/
 timezone:              # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-google_analytics:      G-MY06YS4J4B
+
 
 
 include:
@@ -79,6 +78,12 @@ author:
     - label:           "LinkedIn"
       icon:            "fab fa-fw fa-linkedin"
       url:             "https://www.linkedin.com/in/tanner-sullivan-m-a-184491121/"
+
+analytics:
+  provider: "google-gtag"
+  google:
+    tracking_id: "G-MY06YS4J4B"
+    anonymize_ip:  false # default
 
 footer:
   links:
@@ -131,32 +136,28 @@ defaults:
       path: "/professional-artifacts"
       type: professional-artifacts
     values:
-      layout: single
+      layout: collection
       author_profile: false
       share: true
-    breadcrumbs:           true #disabled by default
+    breadcrumbs: true #disabled by default
   # Educational-artifacts
   - scope:
       path: "/_highered-artifacts/"
       type: highered-artifacts
     values:
-      layout: single
+      layout: collection
       author_profile: false
       share: true
-    breadcrumbs:           true #disabled by default
+    breadcrumbs: true #disabled by default
   # Explorative-artifacts
   - scope:
       path: "/_personal-projects/"
       type: personal-projects
     values:
-      layout: single
+      layout: collection
       author_profile: false
       share: true
-    breadcrumbs:           true #disabled by default
-
-
- 
-
+    breadcrumbs: true #disabled by default
 
 category_archive:
   type:                liquid
