--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title:                 "Tanner S"
-subtitle:              "My Portfolio Site"
+subtitle:              "Portfolio Site"
 logo:                  "assets/images/site-logo-ts.png"
 favcon:                "assets/images/favicon-16x16.png"
 email:                 tssullivan115@icloud.com
-description:           "As I level up, I hope to share some of my favorite projects in this portfolio site. The works included here are focused on technical writing, but who knows what I may explore!"
+hidemyemail:           "vogues-jade-0r@icloud.com"
+description:           "Welcome to my portfolio site. As I level up, I hope to share some of my favorite projects in this portfolio site. The works included here are focused on technical writing, but who knows what I may explore!"
 twitter_username:      sulliespace
 github_username:       tannersullie
 github:                https://github.com/tannersullie/writersite
@@ -64,6 +65,8 @@ plugins:
   - jekyll-feed
   - jemoji
   - jekyll-include-cache
+  - jekyll-email-protect
+  - jekyll-seo-tag
 
 author:
   name   :             "Tanner Sullivan, MA"
@@ -99,6 +102,9 @@ footer:
     - label:           "Post Archives"
       icon:            "fas fa-archive"
       url:             /meta-archives/
+    - label:           "Privacy Policy"
+      icon:            "fas fa-user-secret"
+      url:             /privacy-policy/
 
 
 defaults:
@@ -113,6 +119,11 @@ defaults:
       comments:        true
       share:           true
       related:         true
+    header:
+      overlay_color: "#fff"
+      overlay_filter: linear-gradient(90deg, hsla(48, 32%, 24%, 1) 0%, hsla(42, 89%, 70%, 1) 100%); # dark to goldenrod
+      show_overlay_excerpt: true
+      teaser: /assets/images/og-ref-img.png
   # _pages
   - scope:
       path:            "_pages"
@@ -121,16 +132,11 @@ defaults:
       layout:          single
       author_profile:  true
       show_date:       true
-  # _portfolio
-  # - scope:
-  #     path: "_portfolio"
-  #     type: portfolio
-  #   values:
-  #     layout: wide
-  #     author_profile: false
-  #     share: true
-  #   breadcrumbs:           true #disabled by default
-
+    header:
+      overlay_color: "#fff"
+      overlay_filter: linear-gradient(90deg, hsla(48, 32%, 24%, 1) 0%, hsla(42, 89%, 70%, 1) 100%); # dark to goldenrod
+      show_overlay_excerpt: true
+      teaser: /assets/images/og-ref-img.png
   # Professional-artifacts
   - scope:
       path: "/professional-artifacts"
@@ -140,6 +146,11 @@ defaults:
       author_profile: false
       share: true
     breadcrumbs: true #disabled by default
+    header:
+      overlay_color: "#fff"
+      overlay_filter: linear-gradient(90deg, hsla(48, 32%, 24%, 1) 0%, hsla(42, 89%, 70%, 1) 100%); # dark to goldenrod
+      show_overlay_excerpt: true
+      teaser: /assets/images/og-ref-img.png
   # Educational-artifacts
   - scope:
       path: "/_highered-artifacts/"
@@ -149,6 +160,11 @@ defaults:
       author_profile: false
       share: true
     breadcrumbs: true #disabled by default
+    header:
+      overlay_color: "#fff"
+      overlay_filter: linear-gradient(90deg, hsla(48, 32%, 24%, 1) 0%, hsla(42, 89%, 70%, 1) 100%); # dark to goldenrod
+      show_overlay_excerpt: true
+      teaser: /assets/images/og-ref-img.png
   # Explorative-artifacts
   - scope:
       path: "/_personal-projects/"
@@ -158,6 +174,27 @@ defaults:
       author_profile: false
       share: true
     breadcrumbs: true #disabled by default
+    header:
+      overlay_color: "#fff"
+      overlay_filter: linear-gradient(90deg, hsla(48, 32%, 24%, 1) 0%, hsla(42, 89%, 70%, 1) 100%); # dark to goldenrod
+      show_overlay_excerpt: true
+      teaser: /assets/images/og-ref-img.png
+
+# header:
+#   overlay_color: "#fff"
+#   linear-gradient(90deg, hsla(263, 32%, 24%, 1) 0%, hsla(262, 78%, 51%, 1) 61%, hsla(42, 89%, 70%, 1) 100%); #lavender to electric to yellow
+#   show_overlay_excerpt: true
+# alternatives
+#   overlay_filter: linear-gradient(90deg, hsla(40, 1%, 43%, 1) 0%, hsla(42, 51%, 83%, 1) 100%); # gray to bone
+#   overlay_filter: linear-gradient(90deg, hsla(48, 32%, 24%, 1) 0%, hsla(42, 89%, 70%, 1) 100%); # dark to goldenrod
+#   overlay_filter: linear-gradient(90deg, hsla(271, 37%, 17%, 1) 0%, hsla(262, 78%, 51%, 1) 100%); # Gradient Indigo
+# writer header
+#   header:
+#       overlay_image: /assets/images/group-of-writers.png
+#       image_description: "Writers around books banner placeholder"
+#       overlay_filter: .3 
+#       show_overlay_excerpt: true
+
 
 category_archive:
   type:                liquid
@@ -175,3 +212,6 @@ collections:
   personal-projects:
     output: true
     permalink: /:collection/:path/
+
+jekyll_admin:
+  homepage: "posts"
