Changes to branding and color scheme overhaul; content reduction on about me; update to blog posts source page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
   - title: "Teaching Statement"
     url: /teaching-statement/
   - title: "Blog Posts"
-    url: /tags/
+    url: /posts/
   - title: "Werk Work"
     url: /professional-artifacts/
   - title: "Higher-ed Work"
