--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title:                 "Tanner S"
 subtitle:              "Portfolio Site"
-logo:                  "assets/images/site-logo-ts.png"
+logo:                  "assets/images/TS Logo.jpg"
 favcon:                "assets/images/favicon.ico"
 email:                 tssullivan115@icloud.com
 hidemyemail:           "vogues-jade-0r@icloud.com"
@@ -28,7 +28,7 @@ search:                true
 # Build settings
 markdown:              kramdown
 remote_theme:          mmistakes/minimal-mistakes
-minimal_mistakes_skin: "dirt" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin: "default" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 locale: "en-US"
 timezone: America/Chicago
 date_format: "%Y-%m-%d"
